[package]
name = "pbd"
version = "0.0.5"
authors = ["dsietz <davidsietz@yahoo.com>"]
edition = "2018"
readme = "README.md"
license = "Apache-2.0"
keywords = ["data", "privacy", "sdk", "design", "development"]
categories = ["web-programming", "development-tools", "data-structures","config"]
description = "A software development kit for Privacy by Design (PbD)."
documentation = "https://docs.rs/pbd"
repository = "https://github.com/dsietz/pbd"
exclude = [
    "examples/*",
    "target/*",
	"tests/*",
	"benches/*",
]

[lib]
name = "pbd"
path = "src/lib.rs"

[badges]
maintenance = {status = "actively-developed"}

[features]
default = ["dua"]
dua = ["actix-web","actix-service","futures"] # Data Usae Agreement funcitonality

[dependencies]
log = "0.4"
serde ="1.0"
serde_derive = "1.0"
serde_json = "1.0"
derive_more = "0.99"
json = "0.11"
actix-web = { version = "1.0.9", optional = true }
actix-service = { version = "0.4.2", optional = true }
futures = { version = "0.1", optional = true }