[package]
name = "pbd"
version = "0.5.0"
authors = ["dsietz <davidsietz@yahoo.com>"]
edition = "2018"
readme = "README.md"
license = "Apache-2.0"
keywords = ["data", "privacy", "sdk", "design", "development"]
categories = ["web-programming", "development-tools", "data-structures","config"]
description = "A software development kit for Privacy by Design (PbD)."
documentation = "https://docs.rs/pbd"
repository = "https://github.com/dsietz/pbd"
exclude = [
    "examples/*",
    "target/*",
	"tests/*",
	"benches/*",
]

[lib]
name = "pbd"
path = "src/lib.rs"

[badges]
maintenance = {status = "actively-developed"}

[features]
default = ["dua", "dtc", "dsg", "dpi"]
dua = ["actix-web", "actix-service", "futures", "rayon", "reqwest"] # Data Usage Agreement funcitonality
dtc =["actix-web", "actix-service", "pow_sha256", "base64"] # Data Tracker Chain functionality
dsg =["bytes", "openssl", "rand"] # Data Security Guard functionality
dpi = ["multimap", "eddie", "levenshtein", "rayon", "regex", "rust-tfidf"] # Data Privacy Inspector functionality

[dependencies]
env_logger = "~0.7"
log = "~0.4"
serde ="~1.0"
serde_derive = "~1.0"
serde_json = "~1.0"
derive_more = "~0.99"
json = "~0.12"
futures-util = "0.3.21"
actix-web = { version = "4", optional = true }
actix-service = { version = "^2", optional = true }
futures = { version = "~0.3", optional = true }
rayon = { version = "~1.5", optional = true }
pow_sha256 = { version = "~0.2", optional = true }
base64 = { version = "~0.12", optional = true }
rand = { version = "~0.7", optional = true }
openssl = { version = "~0.10", optional = true }
bytes = { version = "~0.5", optional = true }
regex = { version = "~1.5", optional = true }
eddie = { version = "~0.4", optional = true }
multimap = { version = "~0.8.2", optional = true }
rust-tfidf = { version = "~1.1", optional = true }
levenshtein = { version = "~1.0.4", optional = true }

[dependencies.reqwest]
version = "~0.11"
optional = true
features = ["blocking"]

[dev-dependencies]
actix-rt = "^2"